--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <body>
     <!-- CSS (Forma 1): style inline -->
     <header>
-        <div class="menu-principal">
-            <a href="#">Categorias</a>
-            <a href="#">Biografia</a>
-            <a href="#">Premios</a>
-        </div>
+        <nav class="nav-menu">
+            <ul class="menu-principal">
+            <li class="menu-item" ><a href="#">Categorias</a></li>
+            <li class="menu-item"><a href="#">Biografia</a></li>
+            <li class="menu-item"><a href="#">Premios</a></li>
+        </ul>
+        </nav>
         <div class="logo">
             <img id="logo" src="./images/logo.png" alt="Logo: Gabriel ">
         </div>
@@ -21,9 +23,21 @@
     </header>
     <main class="main">
         <!-- <img src="./images/banner.jpg" alt="banner gabo"> -->
-        <div class="banner">
+        <section class="banner">
         <h1 class="banner-tittle"> Gabriel Garcia Marquez </h1>
-        </div>
+        </section>
+
+        <section class="Obras">
+            
+            <ul class="sections" >
+
+                <li class="section-item"> <a href="#" class="text-anchor" >Cuentos</a> </li>
+                <li class="section-item"> <a href="#" class="text-anchor" >No Ficcion</a></li>
+                <li class="section-item"> <a href="#" class="text-anchor" >Novelas</a></li>
+            </ul>
+    
+        </section>
+
     </main>
     <footer class="footer">
         Aqui van los Widgets de la pagina
